# RootTreeToR

./: .gitignore  DESCRIPTION  LICENSE  MYNOTES  NAMESPACE  NEWS  README.txt  configure  configure.ac  index.html  versionTags
R/: EventList.R  FileForHists.R  RootChain.R  common.R  niceNames.R  rootCommand.R  writeDFToRoot.R  zzz.R
RootTreeToR.xcodeProj/RootTreeToR.xcodeProj.xcodeproj/: project.pbxproj
autom4te.cache/: output.0  requests  traces.0
inst/: CITATION  LICENSE-Rcpp.txt
inst/examples/: exampleEs.root  histos.root
inst/examples/toRUser/: met.h
inst/examples/toRUser/.svn/: entries
inst/examples/toRUser/.svn/text-base/: Makefile.svn-base  mcTree.cpp.svn-base  mcTree.h.svn-base  met.cpp.svn-base  trksInCone.cpp.svn-base  trksInCone.h.svn-base
inst/include/: eventListWrapper.h  fileForHistsWrapper.h  rDataFrame.h  rootChainManager.h  rootChainManagerWrapper.h  treeToR.h
man/: EventList-class.Rd  RootChain-class.Rd  RootTreeToR-package.Rd  addEventLists.Rd  clearEventList.Rd  createEventList.Rd  getEventList.Rd  getEventListName.Rd  getHists.Rd  getNames.Rd  listDirs.Rd  listHists.Rd  makeEventList.Rd  nEntries-methods.Rd  narrowWithEventList.Rd  niceNames.Rd  openFileWithHists.Rd  openRootChain.Rd  rootCommand.Rd  setVerbose.Rd  toR.Rd  toRUser.Rd  writeDFToRoot.Rd
src/: Makevars.in  eventListWrapper.cpp  fileForHistsWrapper.cpp  rDataFrame.cpp  rootChainManager.cpp  rootChainManagerWrapper.cpp  rootCommand.cpp  treeToR.cpp  writeDFToRoot.cpp
tests/: writeDFToRoot-test.R
